fix(widget): keep status rendering compatible